[package]
name = "qoqo-iqm"
version = "0.10.1"
edition = "2021"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
rust-version = "1.56"
license = "Apache-2.0"
homepage = "https://github.com/HQSquantumsimulations/qoqo_iqm"
repository = "https://github.com/HQSquantumsimulations/qoqo_iqm"
documentation = "https://docs.rs/qoqo_iqm/"
readme = "../README.md"
categories = ["science", "simulation"]
description = "IQM backend for qoqo quantum computing toolkit"
include = ["src", "qoqo_iqm", "LICENSE", "pyproject.toml", "Cargo.toml"]

[lib]
name = "qoqo_iqm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies.pyo3]
version = "0.21"
features = ["num-complex"]

[dependencies]
roqoqo-iqm = { version = "~0.10", path = "../roqoqo-iqm" }

qoqo_calculator = { version = "~1.2" }
qoqo_calculator_pyo3 = { version = "~1.2", default-features = false }
qoqo = { version = "~1.15", default-features = false }
roqoqo = { version = "~1.15" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
test-case = "3.1"

[build-dependencies]
pyo3-build-config = "0.21"
pyo3 = "0.21"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
