[package]
name = "roqoqo-iqm"
version = "0.7.0"
edition = "2021"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
rust-version = "1.63.0"
categories = ["science", "simulation"]
readme = "../README.md"
description = "IQM interface for roqoqo rust quantum computing toolkit"
include = ["src*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "roqoqo_iqm"
path = "src/lib.rs"
doctest = false

[dependencies]
itertools = "0.12"
ndarray = "0.15"
qoqo_calculator = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls-vendored"] }
roqoqo = { version = "1.10", features = ["serialize", "unstable_spin_boson_operations"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "3.1"

