[package]
name = "roqoqo-iqm"
version = "0.10.1"
edition = "2021"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
rust-version = "1.63.0"
categories = ["science", "simulation"]
readme = "../README.md"
description = "IQM interface for roqoqo rust quantum computing toolkit"
include = ["src*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "roqoqo_iqm"
path = "src/lib.rs"
doctest = false

[dependencies]
itertools = "0.12"
ndarray = "0.15"
qoqo_calculator = "~1.2"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "native-tls-vendored",
] }
roqoqo = { version = "~1.15", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "3.1"
thiserror = "1.0.60"
